plan translation algo rewrite